--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
 
     <div class="container my-4">
         <h2>contact us</h2>
-        <form class="row g-3" action="./success.html" method="">
+        <form class="row g-3" action="success.html" method="">
             <div class="col-md-6">
                 <label for="inputEmail4" class="form-label">Email</label>
                 <input type="email" class="form-control" id="inputEmail4">
