chnaged the directory

--- a/success.html
+++ b/success.html
@@ -29,7 +29,7 @@
 <body>
     <div class="container">
         <h1>Successfully Message Send</h1>
-        <p><a href="./index.html">home page</a></p>
+        <p><a href="index.html">home page</a></p>
     </div>
     
 </body>
