--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                     </li>
 
                     <li class="nav-item ">
-                        <a class="nav-link active" href="/contact.html">contact us</a>
+                        <a class="nav-link active" href="#">contact us</a>
                     </li>
 
 
